# galileo_flutter

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/build_tool/lib/src/: android_environment.dart  artifacts_provider.dart  build_cmake.dart  build_gradle.dart  build_pod.dart  build_tool.dart  builder.dart  crate_hash.dart  logging.dart  options.dart  rustup.dart  (+4 more)
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/: vt_style.json
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/: .gitignore
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: galileo_flutter.podspec
lib/: galileo_flutter.dart
lib/src/: galileo_map_controller.dart  galileo_map_widget.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
macos/: galileo_flutter.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  utils.rs
rust/src/api/: api.rs  dart_types.rs  mod.rs
rust/src/core/: galileo_ref.rs  map_session.rs  mod.rs  pixel_buffer.rs  windowless_renderer.rs
rust/src/core/flutter/: mod.rs  pixel_texture.rs
windows/: CMakeLists.txt
(+7 files in other folders)
