[package]
name = "galileo_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

# irondash
irondash_texture = "*"
irondash_run_loop = "*"
irondash_engine_context = "*"
irondash_dart_ffi = "*"
galileo = { version = "0.2.1", path = "../../galileo" }
wgpu = "25.0.2"
tokio = { workspace = true }
futures = "0.3"
parking_lot = "0.12"
thiserror = "2.0"
anyhow = "1.0"
lazy_static = "1.4"
env_logger = "0.10"
log = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
